--- a/package.json
+++ b/package.json
@@ -1,24 +1,5 @@
 {
-  "name": "submarine-kata",
-  "version": "1.0.0",
-  "description": "Submarine Navigation Kata with TDD",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "build": "tsc",
-    "dev": "ts-node src/index.ts"
-  },
-  "keywords": ["kata", "tdd", "typescript"],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.10.6",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+  "dependencies": {
+    "maven": "^5.0.0"
   }
 }
